syntax = "proto3";

package group;
import "protoc-gen-openapiv2/options/annotations.proto";
import "google/protobuf/timestamp.proto";
option go_package = "github.com/NEKETSKY/mnemosyne/pkg/api/group";

// The basic message containing the primary information about a group.
message GroupRequest {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      title: "Group json schema"
      required: ["name", "start_date", "end_date"]
    }
  };
  uint32 id = 1;
  string name = 2;
  google.protobuf.Timestamp start_date = 3;
  google.protobuf.Timestamp end_date = 4;
}

// The basic message containing the primary information about a group.
message GroupResponse {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      title: "Group json schema"
      required: ["name", "start_date", "end_date"]
    }
  };
  uint32 id = 1;
  string name = 2;
  google.protobuf.Timestamp start_date = 3;
  google.protobuf.Timestamp end_date = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
  bool deleted = 7;
}

//The basic message containing information about all groups from db
message Groups {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      title: "Groups json schema"
      required: ["groups"]
    }
  };
  repeated GroupResponse groups = 1;
}

//Basic request/response containing id of the group
message Id{
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      title: "Id json schema"
      required: ["id"]
    }
  };
  uint32 id = 1;
}

message GroupsRequest {
  Filter filter = 1;
}

//Filter by groups
message Filter {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      title: "Filter groups json schema"
    }
  };
  uint32 user_id = 1;
  optional string name = 2;
  google.protobuf.Timestamp start_date = 3;
  google.protobuf.Timestamp end_date = 4;
  bool deleted = 5;
}

message UserGroupRequest {
  uint32 user_id = 1;
  uint32 group_id = 2;
}
